# DiskBloom

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: release-windows.yml
benchmarks/: CMakeLists.txt  analyzer_hover_pulse_benchmark.cpp  review_collector_benchmark.cpp  scan_tree_benchmark.cpp  scan_tree_exclusion_benchmark.cpp  sunburst_layout_benchmark.cpp  sunburst_transition_benchmark.cpp
docs/qa/: native-foundation.md  release-0.1.0.md  scan-engine.md  sunburst-analyzer.md  windows-installers.md
docs/superpowers/plans/: 2026-07-15-native-foundation.md  2026-07-16-analyzer-interaction-polish.md  2026-07-16-breadcrumb-navigation-and-sunburst-transitions.md  2026-07-16-directory-transition-preference.md  2026-07-16-file-actions.md  2026-07-16-review-collector-interactions.md  2026-07-16-review-exclusion-and-restore.md  2026-07-16-scan-engine.md  2026-07-16-sunburst-analyzer.md  2026-07-17-smaller-sunburst.md  2026-07-18-typography-chart-settings.md  2026-07-18-windows-release-installers.md
docs/superpowers/specs/: 2026-07-15-windows-disk-visualizer-design.md  2026-07-16-breadcrumb-navigation-and-sunburst-transitions-design.md  2026-07-16-directory-transition-preference-design.md  2026-07-16-hover-pulse-collector-hint-titlebar-drag-design.md  2026-07-16-review-collector-interactions-design.md  2026-07-16-review-exclusion-and-restore-design.md  2026-07-17-smaller-sunburst-design.md  2026-07-17-typography-chart-settings-design.md  2026-07-18-windows-release-installers-design.md
packaging/windows/: Packaging.psm1  build-installers.ps1  verify-installers.ps1
packaging/windows/inno/: DiskBloom.iss
packaging/windows/tests/: driver_tests.ps1  packaging_tests.ps1  verifier_tests.ps1  workflow_tests.ps1
packaging/windows/wix/: Product.en-US.wxl  Product.wxs  Product.zh-CN.wxl
src/: CMakeLists.txt
src/app/: analyzer_breadcrumb.cpp  analyzer_breadcrumb.h  analyzer_geometry.h  analyzer_history.cpp  analyzer_history.h  analyzer_hover_pulse.cpp  analyzer_hover_pulse.h  analyzer_input_lifecycle.cpp  analyzer_input_lifecycle.h  analyzer_navigation.cpp  analyzer_navigation.h  analyzer_transition_controller.cpp  analyzer_transition_controller.h  analyzer_view.cpp  analyzer_view.h  appearance_settings.cpp  appearance_settings.h  deletion_review.cpp  deletion_review.h  directory_transition_policy.cpp  directory_transition_policy.h  disk_overview.cpp  disk_overview.h  main_window.cpp  main_window.h  recycle_session.cpp  recycle_session.h  review_change.cpp  review_change.h  review_collector_interaction.cpp  review_collector_interaction.h  scan_ui_state.cpp  scan_ui_state.h  win_main.cpp
src/core/: child_ranking.cpp  child_ranking.h  language.h  node_path.cpp  node_path.h  scan_tree.cpp  scan_tree.h  scan_tree_exclusion.cpp  scan_tree_exclusion.h  string_catalog.cpp  string_catalog.h  sunburst_layout.cpp  sunburst_layout.h  sunburst_transition.cpp  sunburst_transition.h  theme.cpp  theme.h
src/platform/windows/: file_scanner.cpp  file_scanner.h  folder_picker.cpp  folder_picker.h  recycle_bin.cpp  recycle_bin.h  settings_store.cpp  settings_store.h  shell_actions.cpp  shell_actions.h  system_theme.cpp  system_theme.h  volume_service.cpp  volume_service.h
src/render/: graphics_device.cpp  graphics_device.h
src/resources/: diskbloom.manifest  diskbloom.rc  diskbloom.rc.in  resource.h
src/scan/: scan_session.cpp  scan_session.h
tests/: CMakeLists.txt  analyzer_breadcrumb_tests.cpp  analyzer_child_list_tests.cpp  analyzer_history_tests.cpp  analyzer_hover_pulse_tests.cpp  analyzer_input_lifecycle_tests.cpp  analyzer_layout_tests.cpp  analyzer_navigation_tests.cpp  analyzer_render_smoke_main.cpp  analyzer_transition_controller_tests.cpp  appearance_settings_tests.cpp  child_ranking_tests.cpp  deletion_review_tests.cpp  directory_transition_policy_tests.cpp  disk_overview_layout_tests.cpp  file_scanner_tests.cpp  graphics_capture_tests.cpp  node_path_tests.cpp  recycle_bin_tests.cpp  recycle_session_tests.cpp  release_version_tests.ps1  render_smoke_main.cpp  review_change_tests.cpp  review_collector_interaction_tests.cpp  scan_session_tests.cpp  scan_tree_exclusion_tests.cpp  scan_tree_tests.cpp  scan_ui_state_tests.cpp  settings_store_tests.cpp  shell_actions_tests.cpp  string_catalog_tests.cpp  sunburst_layout_tests.cpp  sunburst_transition_tests.cpp  system_animation_tests.cpp  test_main.cpp  test_support.cpp  test_support.h  theme_tests.cpp  volume_service_tests.cpp
tools/: generate_icon.ps1
