add_executable(
    diskbloom_scan_tree_benchmark
    scan_tree_benchmark.cpp
)
target_link_libraries(
    diskbloom_scan_tree_benchmark
    PRIVATE
        diskbloom_core
        diskbloom_options
)
target_include_directories(
    diskbloom_scan_tree_benchmark
    PRIVATE
        ${PROJECT_SOURCE_DIR}/src
)

add_executable(
    diskbloom_sunburst_layout_benchmark
    sunburst_layout_benchmark.cpp
)
target_link_libraries(
    diskbloom_sunburst_layout_benchmark
    PRIVATE
        diskbloom_core
        diskbloom_options
)
target_include_directories(
    diskbloom_sunburst_layout_benchmark
    PRIVATE
        ${PROJECT_SOURCE_DIR}/src
)

add_executable(
    diskbloom_review_collector_benchmark
    review_collector_benchmark.cpp
)
target_link_libraries(
    diskbloom_review_collector_benchmark
    PRIVATE
        diskbloom_app
        diskbloom_core
        diskbloom_options
)
target_include_directories(
    diskbloom_review_collector_benchmark
    PRIVATE
        ${PROJECT_SOURCE_DIR}/src
)
